add standard response to inventory handlers
