# docs/swagger.yaml
@@ -130,10 +130,26 @@ definitions:
       error:
         type: string
     type: object
+  responses.ResponseApi-array_domains_Inventory:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domains.Inventory'
+        type: array
+      error:
+        type: string
+    type: object
   responses.ResponseApi-domains_Ingredient:
     properties:
       data:
         $ref: '#/definitions/domains.Ingredient'
+      error:
+        type: string
+    type: object
+  responses.ResponseApi-domains_Inventory:
+    properties:
+      data:
+        $ref: '#/definitions/domains.Inventory'
       error:
         type: string
     type: object
@@ -300,9 +316,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/domains.Inventory'
-            type: array
+            $ref: '#/definitions/responses.ResponseApi-array_domains_Inventory'
       security:
       - ApiKeyAuth: []
       summary: Get inventory list
@@ -323,7 +337,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/responses.ResponseAdd'
+            $ref: '#/definitions/responses.ResponseApi-responses_ResponseAdd'
       security:
       - ApiKeyAuth: []
       summary: Create new inventory
@@ -344,7 +358,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domains.Inventory'
+            $ref: '#/definitions/responses.ResponseApi-domains_Inventory'
       security:
       - ApiKeyAuth: []
       summary: Retrieve inventory by id
@@ -370,7 +384,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/responses.ResponseStatus'
+            $ref: '#/definitions/responses.ResponseApi-responses_ResponseStatus'
       security:
       - ApiKeyAuth: []
       summary: Update inventory
